Fix Work section container height overflow

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -26,7 +26,8 @@
 .work-flex {
   width: 100%;
   display: flex;
-  height: 100%;
+  flex: 1;
+  min-height: 0;
   margin-left: -80px;
   padding-right: 120px;
   position: relative;
@@ -42,6 +43,7 @@
   flex-shrink: 0;
   gap: 50px;
   justify-content: start;
+  height: 100%;
 }
 
 .work-flex .work-box:nth-child(even) {
